examples/k8stest/conf/HTTPRoute/Backend/WeightedBackend/Service_edge_backend-c.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-c
  namespace: edgion-test
spec:
  ports:
    - name: http
      port: 30001
      protocol: TCP
      targetPort: 30001
  selector:
    app: edgion-test-server
    app: test-http
